<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tipping Calculator</string>
    <string name="billTotal">Bill total:</string>
    <string name="tenView">10%</string>
    <string name="fifteenView">15%</string>
    <string name="twentyView">20%</string>
    <string name="tip">Tip</string>
    <string name="zero">0.00</string>
    <string name="total">Totals</string>
    <string name="custom">Custom</string>
    <string name="title_activity_tip_calculator">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
